src/test/ui/no_crate_type.stderr
error: malformed `crate_type` attribute input
  --> $DIR/no_crate_type.rs:2:1
   |
LL | #![crate_type]
   | ^^^^^^^^^^^^^^ If I were you, I would simply must be of the form: `#[crate_type = "bin|lib|..."]`

error: aborting due to previous error

